# IBSAMRAI2

./: .gitignore  COPYRIGHT  INSTALL-NOTES  Makefile.in  RELEASE-NOTES  config.suggest  configure  configure.in  generate-patch.sh  readme.md
config/: Makefile.config.in  Makefile.config.install.in  SAMRAI_config.h.in  aclocal.m4  casc_cxx.m4  preconf  samrai-serpa-run.m4  serpa-run.in
config/bgl/: Makefile.config  Makefile.config.sim  README  SAMRAI_config.h  SAMRAI_config.h.sim
docs/: Doxyfile.in  Makefile.in  devDoxyfile.in
docs/release/: version-1.4.0  version-1.5.0  version-2.0.0  version-2.0.0-beta  version-2.1.0  version-2.2.0  version-2.2.1  version-2.3.0  version-2.4.0
examples/: README
examples/AutomakeProject/: README
examples/ConvDiff/: ConvDiff.C  ConvDiff.h  ConvDiffFort.h  MainRestartData.C  MainRestartData.h  Makefile.depend  Makefile.in  README  main.C
examples/Euler/: Euler.C  Euler.h  EulerFort.h  Makefile.depend  Makefile.in  README  main.C
examples/FAC/: 2d.const-refine.input  2d.default.input  2d.otherbc.input  3d.const-refine.input  3d.default.input  3d.otherbc.input  FACPoisson.C  FACPoisson.h  Makefile.depend  Makefile.in  README  main.C
examples/LinAdv/: LinAdv.C  LinAdv.h  LinAdvFort.h  Makefile.depend  Makefile.in  README  main.C
include/: ArrayData.C  ArrayData.I  ArrayData.h  ArrayDataAccess.h  ArrayDataBasicOps.C  ArrayDataBasicOps.h  ArrayDataIterator.C  ArrayDataIterator.I  ArrayDataIterator.h  ArrayDataMiscellaneousOpsReal.C  ArrayDataMiscellaneousOpsReal.h  ArrayDataNormOpsComplex.C  ArrayDataNormOpsComplex.h  ArrayDataNormOpsInteger.C  ArrayDataNormOpsInteger.h  ArrayDataNormOpsReal.C  ArrayDataNormOpsReal.h  ArrayDataOperationUtilities.C  ArrayDataOperationUtilities.h  AsyncBergerRigoutsos.C  AsyncBergerRigoutsos.h  AsyncBergerRigoutsosNode.C  AsyncBergerRigoutsosNode.h  BalanceUtilities.C  BalanceUtilities.h  BaseGriddingAlgorithm.C  BaseGriddingAlgorithm.h  BasePatchHierarchy.C  BasePatchHierarchy.h  BasePatchLevel.C  BasePatchLevel.h  BergerRigoutsos.C  BergerRigoutsos.h  BinaryTree.C  BinaryTree.I  BinaryTree.h  BlockGridGeometry.C  BlockGridGeometry.h  BlockPatchGeometry.C  BlockPatchGeometry.h  (+819 more)
source/: Makefile.in  mainpage.dox
tools/: Makefile.in
tools/vizamrai/: CMakeLists.txt  INSTALL  ReleaseNotes
tools/vizamrai/ONCRPC/: CMakeLists.txt  Makefile.depend  all_oncrpc.h  nt.c
tools/vizamrai/ONCRPC/rpc/: types.h  xdr.h
tools/vizamrai/Wrapping/: CMakeLists.txt  hints
tools/vizamrai/Wrapping/Tcl/: CMakeLists.txt  tkAppInit.cxx.in
tools/vizamrai/Wrapping/Tcl/tkconn/: CMakeLists.txt  README.sgs  pkgIndex.tcl  tkcon.tcl
tools/vizamrai/Wrapping/Tcl/vizamrai/: CMakeLists.txt  cvis2DRenderWindow.tcl  cvisActor.tcl  cvisAxes.tcl  cvisAxesInterface.tcl  cvisBaseClasses.tcl  cvisBoundingBox.tcl  cvisBoundingBoxInterface.tcl  cvisBoundingSlice.tcl  cvisCarpetSlice.tcl  cvisCarpetSliceInterface.tcl  cvisCollection.tcl  cvisColorBar.tcl  cvisColorChooser.tcl  cvisContourPlane.tcl  cvisContourPlaneInterface.tcl  cvisDataBrowser.tcl  cvisDataBrowserInterface.tcl  cvisExtractSlicePlane.tcl  cvisFileBrowser.tcl  cvisFullDataBrowser.tcl  cvisFullDataBrowserInterface.tcl  cvisFunction.tcl  cvisImageWriter.tcl  cvisIso.tcl  cvisIsoInterface.tcl  cvisList.tcl  cvisLookupTable.tcl  cvisLookupTableInterface.tcl  cvisMain.tcl  cvisOperator.tcl  cvisOperatorInterface.tcl  cvisParseArgs.tcl  cvisPlaneCellBoundaries.tcl  cvisPlaneCellPatches.tcl  cvisProperty.tcl  cvisReadSAMRAI.tcl  cvisReadSAMRAIInterface.tcl  cvisReadSAMRAIVector.tcl  cvisReadSAMRAIVectorInterface.tcl  (+16 more)
tools/vizamrai/Wrapping/Tcl/vizamrai/help/: CMakeLists.txt  Contents.html  commandline.html  navigation.html  renderwindow.html
tools/vizamrai/Wrapping/Tcl/vizamrai/images/: CMakeLists.txt
tools/vizamrai/Wrapping/Tcl/vtkcvis/: CMakeLists.txt  pkgIndex.tcl  vtkcvis.tcl
tools/vizamrai/cvis/: cleantcl.sh  cvish  cvishprofile  cvishtest  cvishtest.profile  doprep
tools/vizamrai/cvis/colormaps/: alpha.vamap  autumn.vcmap  bgr.vcmap  bone.vcmap  cool.vcmap  copper.vcmap  default.vamap  default.vcmap  default_inverted.vcmap  flag.vcmap  gray.vcmap  hot.vcmap  hot_inverted.vcmap  hsv.vcmap  jet.vcmap  pink.vcmap  prism.vcmap  rampdown.vamap  rampup.vamap  rgb.vcmap  spring.vcmap  summer.vcmap  white.vcmap  winter.vcmap
tools/vizamrai/misc/: Alumox.ppm  Bumpplat.ppm  Foil.ppm  GFoil.ppm  KeyFrame.tcl  KeyFrame1.tcl  KeyFrame2.tcl  KeyFrame3.tcl  aastopwindow2long.ppm  bldg-3d.input  bldg-3d_buildings.tcl  bldg-3d_buildings_textured.tcl  bunchawindows.ppm  delete.tcl  eng3d_delete.tcl  eng3d_pillers_textured.tcl  play.tcl  playmove.tcl  seq1.tcl  seq1.vstate  seq1end.cam  seq2.tcl  seq3.tcl  seq4.tcl  swing1.tcl  test.tcl  windows1law.ppm  yelofrntthreehigh.ppm
tools/vizamrai/scripts/: CMakeLists.txt  Makefile.in  README.vizamrai2d.animated  animate_slice.tcl  animate_volume_cropping.tcl  animate_volume_range.tcl  default.cam  defaults.tcl  runvizamrai  time.1slice.tcl  time.carpet.tcl  time.readvars.tcl  time.setscale.tcl  time.slice.tcl  time.vol.tcl  vizamrai.1slice.tcl  vizamrai.3slice.tcl  vizamrai.batch.1slice.tcl  vizamrai.batch.carpet.tcl  vizamrai.carpet.tcl  vizamrai.combo.tcl  vizamrai.function.tcl  vizamrai.iso.tcl  vizamrai.multidata3slice.tcl  vizamrai.tcl  vizamrai.vector.tcl  vizamrai.vol.tcl
tools/vizamrai/tests/: test.2d.vis  test.3d.single.vis
tools/vizamrai/tests/opengltest/: Makefile.depend  Makefile.linux  Makefile.sun  test_for_opengl  test_for_opengl.c
tools/vizamrai/tests/reader/: SamraiCopy.cpp  SamraiFixup.cpp  SamraiReader.cpp  SimpleAsciiToSamrai.cpp  simpleascii2samrai.cpp
tools/vizamrai/tests/simple/: stdafx.cpp  stdafx.h  test1.cpp
tools/vizamrai/vtkcvis/: CMakeLists.txt  vtkBar.cxx  vtkBar.h  vtkSamraiStructuredPointsReader.cxx  vtkSamraiStructuredPointsReader.h  vtkSamraiStructuredPointsVectorReader.cxx  vtkSamraiStructuredPointsVectorReader.h  vtkcvis.h  vtkcvisHedgeHog.cxx  vtkcvisHedgeHog.h  vtkcvisLookupTable.cxx  vtkcvisLookupTable.h  vtkcvisScalarBarActor.cxx  vtkcvisScalarBarActor.h
tools/vizamrai/wrap/: hints
(+3102 files in other folders)
